--- a/index.html
+++ b/index.html
@@ -14,15 +14,27 @@
 <body>
 <header>
   <h1>Paul Sempels</h1>
+  <i>So this is italic then --> replace with quote</i>
+
 </header>
+<main>
 
 <img src="img/picture1.jpg" height="500" width="500"/>
 
-<p>test2</p>
+<h2>A more silent geeky guy</h2>
+<table>
+  
+  <tr>  Birthday: 13/07         </tr><br>
+  <tr>  Gender: Male            </tr><br>
+  <tr>  Favorite color: Green   </tr><br>
+  <tr>  Favorite food: Pie      </tr><br>
+  <tr>  Pineapple on pizza: <input type="checkbox" checked> </tr><br>
 
+</table>
+</main>
 <footer>
-  <a href="TBA">Previous</a>|| Paul Sempels || <a href="TBA">Next</a>
+  <a href="https://oscarpete.github.io/HTML-introduction/">Previous</a>|| Paul Sempels || <a href="TBA">Next</a>
 </footer>
-</body>
 
+</body>
 </html>
