made some corrections

--- a/index.html
+++ b/index.html
@@ -22,15 +22,27 @@
 <img src="img/picture1.jpg" height="500" width="500"/>
 
 <h2>A more silent geeky guy</h2>
-<table>
-  
-  <tr>  Birthday: 13/07         </tr><br>
-  <tr>  Gender: Male            </tr><br>
-  <tr>  Favorite color: Green   </tr><br>
-  <tr>  Favorite food: Pie      </tr><br>
-  <tr>  Pineapple on pizza: <input type="checkbox" checked> </tr><br>
+<table style="width:100%">
 
+  <tr>
+    <th>Birthday:</th>
+    <th>Gender:</th>
+    <th>Favorite color:</th>
+    <th>Favorite food:</th>
+    <th>Pineapple on pizza:</th>
+  </tr>
+  <tr>
+    <td>13/07</td>
+    <td>Male</td>
+    <td>Green</td>
+    <td>Pie</td>
+    <td><input type="checkbox" checked></td>
+  </tr>
 </table>
+ <h3>Some hobbies:</h3>
+  <ul>
+    <li>test</li>
+  </ul>
 </main>
 <footer>
   <a href="https://oscarpete.github.io/HTML-introduction/">Previous</a>|| Paul Sempels || <a href="TBA">Next</a>
