readme update, minor html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </header>
 <main>
 
-<img src="img/picture1.jpg" height="500" width="500"/>
+<img src="img/picture1.jpg" height="500" width="500" alt="there should be a picture here"/>
 
-<h2>A more silent geeky guy</h2>
+<h2>A quiet geeky guy</h2>
 <table style="width:100%">
 
   <tr>
@@ -45,7 +45,7 @@
   </ul>
 </main>
 <footer>
-  <a href="https://oscarpete.github.io/HTML-introduction/">Previous</a>|| Paul Sempels || <a href="TBA">Next</a>
+  <a href="https://oscarpete.github.io/HTML-introduction/">Previous</a>|| Paul Sempels || <a href="https://pdhondt.github.io/html-introduction/">Next</a>
 </footer>
 
 </body>
