--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>my first webpage</title>
+  <title style="text-align: center">my first webpage</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,17 +13,15 @@
 
 <body>
 <header>
-  <h1>Paul Sempels</h1>
-  <i>So this is italic then --> replace with quote</i>
-
+  <h1 class="name">Paul Sempels</h1>
+  <a class="joke" href="https://tinyurl.com/2fcpre6"><i>♫ never gonna give you up, never gonna let you down ♪</i></a>
 </header>
 <main>
 
 <img src="img/picture1.jpg" height="500" width="500" alt="there should be a picture here"/>
 
-<h2>A quiet geeky guy</h2>
+<h2>A quiet geeky guy. 25years old and coffee's ruled my life for 10 of those.</h2>
 <table style="width:100%">
-
   <tr>
     <th>Birthday:</th>
     <th>Gender:</th>
@@ -39,10 +37,26 @@
     <td><input type="checkbox" checked></td>
   </tr>
 </table>
- <h3>Some hobbies:</h3>
+ <h3>My amazing hobbies:</h3>
   <ul>
-    <li>test</li>
+    <li>Miniature painting</li>
+    <li>Gaming
+      <ul style="list-style-type: circle">
+        <li>Albion</li>
+        <li>World of Warcraft</li>
+        <li>age of empires</li>
+        <li>Many more</li>
+      </ul>
+    </li>
+    <li>Reading</li>
+    <li>Drawing
+      <ul style="list-style-type: circle">
+        <li>Maps</li>
+        <li>random things of interest</li>
+      </ul>
+    </li>
   </ul>
+
 </main>
 <footer>
   <a href="https://oscarpete.github.io/HTML-introduction/">Previous</a>|| Paul Sempels || <a href="https://pdhondt.github.io/html-introduction/">Next</a>
