added pictures and more

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </header>
 <main>
 
-<img src="img/picture1.jpg" height="500" width="500" alt="there should be a picture here"/>
+<img src="img/picture1.jpg" height="250" width="250" style="border-radius: 125px" alt="there should be a picture here"/>
 
 <h2>A quiet geeky guy. 25years old and coffee's ruled my life for 10 of those.</h2>
 <table style="width:100%">
@@ -30,14 +30,14 @@
     <th>Pineapple on pizza:</th>
   </tr>
   <tr>
-    <td>13/07</td>
+    <td>13/07/'95</td>
     <td>Male</td>
     <td>Green</td>
     <td>Pie</td>
     <td><input type="checkbox" checked></td>
   </tr>
 </table>
- <h3>My amazing hobbies:</h3>
+ <h3 style="text-align: left">My amazing hobbies:</h3>
   <ul>
     <li>Miniature painting</li>
     <li>Gaming
@@ -51,11 +51,18 @@
     <li>Reading</li>
     <li>Drawing
       <ul style="list-style-type: circle">
-        <li>Maps</li>
-        <li>random things of interest</li>
+        <li>Maps <img src="img/picture2.jpg" height="250" width="250" alt="pic of a drawing"/></li>
+        <li>random things of interest <img src="img/picture3.jpg" height="250" width="250" alt="another pic of a drawing"/></li>
       </ul>
     </li>
   </ul>
+  <h4>You can count on me</h4>
+  <p>I'm always willing to share what knowledge I might have, if it can help someone out!</p>
+  <h5>A funny story:</h5>
+  <p>Once upon a time I tried to create my own hotwire-cutter, and so I bought a power source with a rotary knob.<br>While trying to solder the wires I ended up melting and burning a hole into the power source.</p>
+  <H6>TL;DR</H6>
+  <p>DIY is not for everyone</p>
+  <img src="img/bananaduck.jpg" height="250" width="250" alt="don't worry about it"/>
 
 </main>
 <footer>
