potential layout correction

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
     <li>Miniature painting</li>
     <li>Gaming
       <ul style="list-style-type: circle">
-        <li>Albion</li>
-        <li>World of Warcraft</li>
-        <li>age of empires</li>
-        <li>Many more</li>
+        <li class="beterzo">Albion</li>
+        <li class="beterzo">World of Warcraft</li>
+        <li class="beterzo">age of empires</li>
+        <li class="beterzo">Many more</li>
       </ul>
     </li>
-    <li>Reading</li>
-    <li>Drawing
+    <li class="beterzo">Reading</li>
+    <li class="beterzo">Drawing
       <ul style="list-style-type: circle">
-        <li>Maps <img src="img/picture2.jpg" height="250" width="250" alt="pic of a drawing"/></li>
-        <li>random things of interest <img src="img/picture3.jpg" height="250" width="250" alt="another pic of a drawing"/></li>
+        <li class="beterzo">Maps <img src="img/picture2.jpg" height="250" width="250" alt="pic of a drawing"/></li>
+        <li class="beterzo">random things of interest <img src="img/picture3.jpg" height="250" width="250" alt="another pic of a drawing"/></li>
       </ul>
     </li>
   </ul>
